add webapi feature for telegram-parity
